--- a/docs/api/configureStore.mdx
+++ b/docs/api/configureStore.mdx
@@ -14,7 +14,7 @@ to the store setup for a better development experience.
 
 `configureStore` accepts a single configuration object parameter, with the following options:
 
-```ts
+```ts no-transpile
 type ConfigureEnhancersCallback = (
   defaultEnhancers: StoreEnhancer[]
 ) => StoreEnhancer[]
