--- a/docs/api/createAction.mdx
+++ b/docs/api/createAction.mdx
@@ -15,10 +15,10 @@ function createAction(type, prepareAction?)
 
 The usual way to define an action in Redux is to separately declare an _action type_ constant and an _action creator_ function for constructing actions of that type.
 
-```js
+```ts
 const INCREMENT = 'counter/increment'
 
-function increment(amount) {
+function increment(amount: number) {
   return {
     type: INCREMENT,
     payload: amount
@@ -89,13 +89,15 @@ If provided, all arguments from the action creator will be passed to the prepare
 
 Because of their `toString()` override, action creators returned by `createAction()` can be used directly as keys for the case reducers passed to [createReducer()](createReducer.md).
 
-```js
-const increment = createAction('counter/increment')
-const decrement = createAction('counter/decrement')
+```ts
+import { createAction, createReducer } from '@reduxjs/toolkit'
 
-const counterReducer = createReducer(0, {
-  [increment]: (state, action) => state + action.payload,
-  [decrement]: (state, action) => state - action.payload
+const increment = createAction<number>('counter/increment')
+const decrement = createAction<number>('counter/decrement')
+
+const counterReducer = createReducer(0, builder => {
+  builder.addCase(increment, (state, action) => state + action.payload)
+  builder.addCase(decrement, (state, action) => state - action.payload)
 })
 ```
 
@@ -151,7 +153,9 @@ This `match` method is a [TypeScript type guard](https://www.typescriptlang.org/
 
 This behavior can be particularly useful when used in custom middlewares, where manual casts might be neccessary otherwise.
 
-```typescript
+```ts
+import { createAction, Action } from '@reduxjs/toolkit'
+
 const increment = createAction<number>('INCREMENT')
 
 function someFunction(action: Action) {
@@ -166,7 +170,11 @@ function someFunction(action: Action) {
 
 The `match` method can also be used as a filter method, which makes it powerful when used with redux-observable:
 
-```typescript
+```ts
+import { createAction, Action } from '@reduxjs/toolkit'
+import { Observable } from 'rxjs'
+import { map, filter } from 'rxjs/operators'
+
 const increment = createAction<number>('INCREMENT')
 
 export const epic = (actions$: Observable<Action>) =>
