migrate more docs

--- a/docs/api/getDefaultMiddleware.mdx
+++ b/docs/api/getDefaultMiddleware.mdx
@@ -38,20 +38,20 @@ to the store. `configureStore` will not add any extra middleware beyond what you
 `getDefaultMiddleware` is useful if you want to add some custom middleware, but also still want to have the default
 middleware added as well:
 
-```js
-const store = configureStore({
-  reducer: rootReducer,
-  middleware: getDefaultMiddleware().concat(logger)
-})
+```ts
+// file: reducer.ts noEmit
 
-// Store has all of the default middleware added, _plus_ the logger middleware
-```
+export default function rootReducer(state = {}, action: any) {
+  return state
+}
 
-## Middleware Callback Notation for `configureStore`
+// file: store.ts
+import { configureStore } from '@reduxjs/toolkit'
 
-For convenience, the `middleware` property of `configureStore` can be used with a callback notation like this.
+import logger from 'redux-logger'
 
-```js
+import rootReducer from './reducer'
+
 const store = configureStore({
   reducer: rootReducer,
   middleware: getDefaultMiddleware => getDefaultMiddleware().concat(logger)
@@ -60,9 +60,30 @@ const store = configureStore({
 // Store has all of the default middleware added, _plus_ the logger middleware
 ```
 
-While this does not make much of a difference for JavaScript users, using this notation is preferrable to TypeScript users, as that version of `getDefaultMiddleware` is already correctly pre-typed for the `Store`'s type, so no use of generics is necessary.
+It is preferrable to use the chainable `.concat(...)` and `.prepend(...)` methods of the returned `MiddlewareArray` instead of the array spread operator, as the latter can lose valuable type information under some circumstances.
 
-Also, when using TypeScript, it is preferrable to use the chainable `.concat(...)` and `.prepend(...)` methods of the returned `MiddlewareArray` instead of the array spread operator, as the latter can lose valuable type information under some circumstances.
+## getDefaultMiddleware import
+
+While the callback notation with `configureStore` shown in the last example is the recommended way of using `getDefaultMiddleware`, it can also be imported to be used independently from 'configureStore':
+
+```ts
+// file: reducer.ts noEmit
+
+export default function rootReducer(state = {}, action: any) {
+  return state
+}
+
+// file: store.ts
+import { getDefaultMiddleware } from '@reduxjs/toolkit'
+
+interface State {
+  // ...
+}
+
+const middlewares = getDefaultMiddleware<State>()
+```
+
+The benefit of using the callback notation is that the `State` type is already pre-bound, which might prevent circular type references when trying to specify generics by hand.
 
 ## Included Default Middleware
 
@@ -110,17 +131,37 @@ This example shows excluding the serializable state check middleware, and passin
 middleware's "extra argument":
 
 ```ts
-const customizedMiddleware = getDefaultMiddleware({
-  thunk: {
-    extraArgument: myCustomApiService
-  },
-  serializableCheck: false
+// file: reducer.ts noEmit
+
+export default function rootReducer(state = {}, action: any) {
+  return state
+}
+
+// file: api.ts noEmit
+
+export declare const myCustomApiService: any
+
+// file: store.ts
+
+import { configureStore } from '@reduxjs/toolkit'
+import rootReducer from './reducer'
+import { myCustomApiService } from './api'
+
+const store = configureStore({
+  reducer: rootReducer,
+  middleware: getDefaultMiddleware =>
+    getDefaultMiddleware({
+      thunk: {
+        extraArgument: myCustomApiService
+      },
+      serializableCheck: false
+    })
 })
 ```
 
 ## API Reference
 
-```ts
+```ts no-transpile
 interface ThunkOptions<E = any> {
   extraArgument: E
 }
