--- a/docs/api/createReducer.mdx
+++ b/docs/api/createReducer.mdx
@@ -28,154 +28,21 @@ function counterReducer(state = 0, action) {
 
 This approach works well, but is a bit boilerplate-y and error-prone. For instance, it is easy to forget the `default` case or setting the initial state.The `createReducer` helper streamlines the implementation of such reducers.
 
-## Parameters
+## Usage with the "Builder Callback" Notation
 
-`createReducer` accepts four possible parameters, with the first two required.
+The recommended way of using `createReducer` is the builder callback notation, as it works best with TypeScript and most IDEs.
 
-### `initialState`
+[overloadSummary](docblock://createReducer.ts?token=createReducer&overload=0)
 
-The initial state that should be used when the reducer is called the first time.
+### Parameters
 
-### `caseReducers`
+[params](docblock://createReducer.ts?token=createReducer&overload=0)
 
-An object mapping from action types to _case reducers_, each of which handles one specific action type.
+### Example usage
 
-```js
-const counterReducer = createReducer(0, {
-  increment: (state, action) => state + action.payload,
-  decrement: (state, action) => state - action.payload
-})
-```
+[examples](docblock://createReducer.ts?token=createReducer&overload=0)
 
-Action creators that were generated using [`createAction`](./createAction.md) may be used directly as the keys here, using
-computed property syntax:
-
-```js
-const increment = createAction('increment')
-const decrement = createAction('decrement')
-
-const counterReducer = createReducer(0, {
-  [increment]: (state, action) => state + action.payload,
-  [decrement.type]: (state, action) => state - action.payload
-})
-```
-
-Alternately, the second argument may be a "builder callback" function that can be used to add case handlers for specific action types, match against a range of action types, or provide a fallback default case if no other actions matched:
-
-```js
-const initialState = {
-  counter: 0,
-  rejectedActions: 0,
-  unhandledActions: 0
-}
-
-const exampleReducer = createReducer(initialState, builder => {
-  builder
-    .addCase('counter', state => {
-      state.counter++
-    })
-    .addMatcher(
-      action => action.type.endsWith('/rejected'),
-      (state, action) => {
-        state.rejectedActions++
-      }
-    )
-    .addDefaultCase((state, action) => {
-      state.unhandledActions++
-    })
-})
-```
-
-See the ["Builder Callback Notation"](#builder-callback-notation) section below for details on defining reducers using this syntax.
-
-> **Note**: If you are using TypeScript, we specifically recommend using the builder callback API to get proper inference of TS types for action objects. If you do not use the builder callback and are using TypeScript, you will need to use `actionCreator.type` or `actionCreator.toString()` as the key to force the TS compiler to accept the computed property. Please see [Usage With TypeScript](./../usage/usage-with-typescript.md#type-safety-with-extraReducers) for further details.
-
-### `actionMatchers`
-
-An optional array of objects that include a `matcher` function to determine if an action should be handled, and a `reducer` function that updates the state. This argument will be ignored if the second argument is a builder callback.
-
-### `defaultCase`
-
-A reducer that will be run if no other case reducers or matchers handle a given action. This argument will be ignored if the second argument is a builder callback.
-
-## Direct State Mutation
-
-Redux requires reducer functions to be pure and treat state values as immutable. While this is essential for making state updates predictable and observable, it can sometimes make the implementation of such updates awkward. Consider the following example:
-
-```js
-const addTodo = createAction('todos/add')
-const toggleTodo = createAction('todos/toggle')
-
-const todosReducer = createReducer([], {
-  [addTodo]: (state, action) => {
-    const todo = action.payload
-    return [...state, todo]
-  },
-  [toggleTodo]: (state, action) => {
-    const index = action.payload
-    const todo = state[index]
-    return [
-      ...state.slice(0, index),
-      { ...todo, completed: !todo.completed }
-      ...state.slice(index + 1)
-    ]
-  }
-})
-```
-
-The `addTodo` reducer is straightforward if you know the [ES6 spread syntax](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax). However, the code for `toggleTodo` is much less straightforward, especially considering that it only sets a single flag.
-
-To make things easier, `createReducer` uses [immer](https://github.com/mweststrate/immer) to let you write reducers as if they were mutating the state directly. In reality, the reducer receives a proxy state that translates all mutations into equivalent copy operations.
-
-```js
-const addTodo = createAction('todos/add')
-const toggleTodo = createAction('todos/toggle')
-
-const todosReducer = createReducer([], {
-  [addTodo]: (state, action) => {
-    // This push() operation gets translated into the same
-    // extended-array creation as in the previous example.
-    const todo = action.payload
-    state.push(todo)
-  },
-  [toggleTodo]: (state, action) => {
-    // The "mutating" version of this case reducer is much
-    //  more direct than the explicitly pure one.
-    const index = action.payload
-    const todo = state[index]
-    todo.completed = !todo.completed
-  }
-})
-```
-
-Writing "mutating" reducers simplifies the code. It's shorter, there's less indirection, and it eliminates common mistakes made while spreading nested state. However, the use of Immer does add some "magic", and Immer has its own nuances in behavior. You should read through [pitfalls mentioned in the immer docs](https://immerjs.github.io/immer/docs/pitfalls) . Most importantly, **you need to ensure that you either mutate the `state` argument or return a new state, _but not both_**. For example, the following reducer would throw an exception if a `toggleTodo` action is passed:
-
-```js
-const todosReducer = createReducer([], {
-  [toggleTodo]: (state, action) => {
-    const index = action.payload
-    const todo = state[index]
-
-    // This case reducer both mutates the passed-in state...
-    todo.completed = !todo.completed
-
-    // ... and returns a new value. This will throw an
-    // exception. In this example, the easiest fix is
-    // to remove the `return` statement.
-    return [...state.slice(0, index), todo, ...state.slice(index + 1)]
-  }
-})
-```
-
-## Builder Callback Notation
-
-Instead of using a plain object as an argument to `createReducer`, you can also provide a "builder callback" function that receives an `ActionReducerMapBuilder` instance:
-
-[examples](docblock://createReducer.ts?token=createReducer&overload=1)
-
-While the object syntax is shorter, the builder callback syntax allows adding multiple forms of reducers. It also provides better type inference, as passing a plain object full of reducer functions cannot infer their types correctly in this case.
-
-We recommend using this API if stricter type safety is necessary when defining reducer argument objects.
+### Details on the builder methods
 
 ### `builder.addCase`
 
@@ -188,6 +55,14 @@ We recommend using this API if stricter type safety is necessary when defining r
 ### `builder.addDefaultCase`
 
 [summary,remarks,params,examples](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addDefaultCase)
+
+## Usage with the "Map Object" Notation
+
+While this notation is a bit shorter, it works only in JavaScript, not TypeScript and has less integration with IDEs, so we recommend the "builder callback" notation in most cases.
+
+### Parameters
+
+[params](docblock://createReducer.ts?token=createReducer&overload=1)
 
 ### Matchers and Default Cases as Arguments
 
@@ -219,11 +94,105 @@ const lengthOfAllStringsReducer = createReducer(
 )
 ```
 
+## Direct State Mutation
+
+Redux requires reducer functions to be pure and treat state values as immutable. While this is essential for making state updates predictable and observable, it can sometimes make the implementation of such updates awkward. Consider the following example:
+
+```ts
+import { createAction, createReducer } from '@reduxjs/toolkit'
+
+interface Todo {
+  text: string
+  completed: boolean
+}
+
+const addTodo = createAction<Todo>('todos/add')
+const toggleTodo = createAction<number>('todos/toggle')
+
+const todosReducer = createReducer([] as Todo[], builder => {
+  builder
+    .addCase(addTodo, (state, action) => {
+      const todo = action.payload
+      return [...state, todo]
+    })
+    .addCase(toggleTodo, (state, action) => {
+      const index = action.payload
+      const todo = state[index]
+      return [
+        ...state.slice(0, index),
+        { ...todo, completed: !todo.completed },
+        ...state.slice(index + 1)
+      ]
+    })
+})
+```
+
+The `addTodo` reducer is straightforward if you know the [ES6 spread syntax](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax). However, the code for `toggleTodo` is much less straightforward, especially considering that it only sets a single flag.
+
+To make things easier, `createReducer` uses [immer](https://github.com/mweststrate/immer) to let you write reducers as if they were mutating the state directly. In reality, the reducer receives a proxy state that translates all mutations into equivalent copy operations.
+
+```ts
+import { createAction, createReducer } from '@reduxjs/toolkit'
+
+interface Todo {
+  text: string
+  completed: boolean
+}
+
+const addTodo = createAction<Todo>('todos/add')
+const toggleTodo = createAction<number>('todos/toggle')
+
+const todosReducer = createReducer([] as Todo[], builder => {
+  builder
+    .addCase(addTodo, (state, action) => {
+      // This push() operation gets translated into the same
+      // extended-array creation as in the previous example.
+      const todo = action.payload
+      state.push(todo)
+    })
+    .addCase(toggleTodo, (state, action) => {
+      // The "mutating" version of this case reducer is much
+      //  more direct than the explicitly pure one.
+      const index = action.payload
+      const todo = state[index]
+      todo.completed = !todo.completed
+    })
+})
+```
+
+Writing "mutating" reducers simplifies the code. It's shorter, there's less indirection, and it eliminates common mistakes made while spreading nested state. However, the use of Immer does add some "magic", and Immer has its own nuances in behavior. You should read through [pitfalls mentioned in the immer docs](https://immerjs.github.io/immer/docs/pitfalls) . Most importantly, **you need to ensure that you either mutate the `state` argument or return a new state, _but not both_**. For example, the following reducer would throw an exception if a `toggleTodo` action is passed:
+
+```ts
+import { createAction, createReducer } from '@reduxjs/toolkit'
+
+interface Todo {
+  text: string
+  completed: boolean
+}
+
+const toggleTodo = createAction<number>('todos/toggle')
+
+const todosReducer = createReducer([] as Todo[], builder => {
+  builder.addCase(toggleTodo, (state, action) => {
+    const index = action.payload
+    const todo = state[index]
+
+    // This case reducer both mutates the passed-in state...
+    todo.completed = !todo.completed
+
+    // ... and returns a new value. This will throw an
+    // exception. In this example, the easiest fix is
+    // to remove the `return` statement.
+    return [...state.slice(0, index), todo, ...state.slice(index + 1)]
+  })
+})
+```
+
 ## Multiple Case Reducer Execution
 
 Originally, `createReducer` always matched a given action type to a single case reducer, and only that one case reducer would execute for a given action.
 
-The action matcher support changes that behavior, as multiple matchers may handle a single action.
+Using action matchers changes that behavior, as multiple matchers may handle a single action.
 
 For any dispatched action, the behavior is:
 
@@ -234,16 +203,18 @@ For any dispatched action, the behavior is:
 
 The executing reducers form a pipeline, and each of them will receive the output of the previous reducer:
 
-```js
+```ts
+import { createReducer } from '@reduxjs/toolkit'
+
 const reducer = createReducer(0, builder => {
   builder
     .addCase('increment', state => state + 1)
     .addMatcher(
-      action => action.type.startsWith('i'),
+      action => action.startsWith('i'),
       state => state * 5
     )
     .addMatcher(
-      action => action.type.endsWith('t'),
+      action => action.endsWith('t'),
       state => state + 2
     )
 })
@@ -262,7 +233,6 @@ It's very common for a developer to call `console.log(state)` during the develop
 When using either `createSlice` or `createReducer`, you may use the [`current`](./otherExports#current.md) utility that we re-export from the [`immer` library](https://immerjs.github.io/immer/docs/current). This utility creates a separate plain copy of the current Immer `Draft` state value, which can then be logged for viewing as normal.
 
 ```ts
-// todosSlice.js
 import { createSlice, current } from '@reduxjs/toolkit'
 
 const slice = createSlice({
