--- a/docs/api/createReducer.mdx
+++ b/docs/api/createReducer.mdx
@@ -46,15 +46,27 @@ The recommended way of using `createReducer` is the builder callback notation, a
 
 ### `builder.addCase`
 
-[summary,remarks,params,examples](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addCase)
+[summary,remarks](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addCase)
+
+#### Parameters
+
+[params,examples](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addCase)
 
 ### `builder.addMatcher`
 
-[summary,remarks,params,examples](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addMatcher)
+[summary,remarks](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addMatcher)
+
+#### Parameters
+
+[params,examples](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addMatcher)
 
 ### `builder.addDefaultCase`
 
-[summary,remarks,params,examples](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addDefaultCase)
+[summary,remarks](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addDefaultCase)
+
+#### Parameters
+
+[params,examples](docblock://mapBuilders.ts?token=ActionReducerMapBuilder.addDefaultCase)
 
 ## Usage with the "Map Object" Notation
 
@@ -63,6 +75,10 @@ While this notation is a bit shorter, it works only in JavaScript, not TypeScrip
 ### Parameters
 
 [params](docblock://createReducer.ts?token=createReducer&overload=1)
+
+### Example usage
+
+[examples](docblock://createReducer.ts?token=createReducer&overload=1)
 
 ### Matchers and Default Cases as Arguments
 
