--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -22,8 +22,9 @@ function createSlice({
     initialState: any,
     // An object of "case reducers". Key names will be used to generate actions.
     reducers: Object<string, ReducerFunction | ReducerAndPrepareObject>
-    // An additional object of "case reducers", where the keys should be other
-    // action types, or a "builder callback" function used to add more reducers
+    // A "builder callback" function used to add more reducers, or
+    // an additional object of "case reducers", where the keys should be other
+    // action types
     extraReducers?:
     | Object<string, ReducerFunction>
     | ((builder: ActionReducerMapBuilder<State>) => void)
@@ -73,7 +74,7 @@ import { createSlice, PayloadAction } from '@reduxjs/toolkit'
 import nanoid from 'nanoid'
 
 interface Item {
-  id: string,
+  id: string
   text: string
 }
 
@@ -100,14 +101,31 @@ One of the key concepts of Redux is that each slice reducer "owns" its slice of 
 can independently respond to the same action type. `extraReducers` allows `createSlice` to respond to other action types
 besides the types it has generated.
 
-Like `reducers`, `extraReducers` can be an object containing Redux case reducer functions. However, the keys should
-be other Redux string action type constants, and `createSlice` will _not_ auto-generate action types or action creators
-for reducers included in this parameter.
+As case reducers specified with `extraReducers` are meant to reference "external" actions, they will not have actions generated in `slice.actions`.
 
 As with `reducers`, these case reducers will also be passed to `createReducer` and may "mutate" their state safely.
 
 If two fields from `reducers` and `extraReducers` happen to end up with the same action type string,
 the function from `reducers` will be used to handle that action type.
+
+### The `extraReducers` "builder callback" notation
+
+The recommended way of using `extraReducers` is to use a callback that receives a `ActionReducerMapBuilder` instance.
+
+This builder notation is also the only way to add matcher reducers and default case reducers to your slice.
+
+[examples](docblock://createSlice.ts?token=CreateSliceOptions.extraReducers)
+
+We recommend using this API as it has better TypeScript support (and thus, IDE autocomplete even for JavaScript users), as it will correctly infer the action type in the reducer based on the provided action creator.
+It's particularly useful for working with actions produced by `createAction` and `createAsyncThunk`.
+
+See [the "Builder Callback Notation" section of the `createReducer` reference](./createReducer.md#usage-with-the-builder-callback-notation) for details on how to use `builder.addCase`, `builder.addMatcher`, and `builder.addDefault`
+
+### The `extraReducers` "map object" notation
+
+Like `reducers`, `extraReducers` can be an object containing Redux case reducer functions. However, the keys should
+be other Redux string action type constants, and `createSlice` will _not_ auto-generate action types or action creators
+for reducers included in this parameter.
 
 Action creators that were generated using [`createAction`](./createAction.md) may be used directly as the keys here, using
 computed property syntax.
@@ -128,53 +146,8 @@ createSlice({
 })
 ```
 
-> **Note**: If you are using TypeScript, we recommend using the `builder callback` API that is shown below. If you do not use the `builder callback` and are using TypeScript, you will need to use `actionCreator.type` or `actionCreator.toString()`
+> **Note**: If you are using TypeScript, we recommend using the `builder callback` API that is shown above. If you do not use the `builder callback` and are using TypeScript, you will need to use `actionCreator.type` or `actionCreator.toString()`
 > to force the TS compiler to accept the computed property. Please see [Usage With TypeScript](./../usage/usage-with-typescript.md#type-safety-with-extraReducers) for further details.
-
-### The "builder callback" API for `extraReducers`
-
-Instead of using an object as `extraReducers`, you can also use a callback that receives a `ActionReducerMapBuilder` instance.
-
-This builder notation is also the only way to add matcher reducers and default case reducers to your slice.
-
-```ts
-import { createAction, createSlice, Action, AnyAction } from '@reduxjs/toolkit'
-const incrementBy = createAction<number>('incrementBy')
-const decrement = createAction('decrement')
-
-interface RejectedAction extends Action {
-  error: Error
-}
-
-function isRejectedAction(action: AnyAction): action is RejectedAction {
-  return action.type.endsWith('rejected')
-}
-
-createSlice({
-  name: 'counter',
-  initialState: 0,
-  reducers: {},
-  extraReducers: builder =>
-    builder
-      .addCase(incrementBy, (state, action) => {
-        // action is inferred correctly here if using TS
-      })
-      // You can chain calls, or have separate `builder.addCase()` lines each time
-      .addCase(decrement, (state, action) => {})
-      // You can match a range of action types
-      .addMatcher(
-        isRejectedAction,
-        // `action` will be inferred as a RejectedAction due to isRejectedAction being defined as a type guard
-        (state, action) => {}
-      )
-      // and provide a default case if no other handlers matched
-      .addDefaultCase((state, action) => {})
-})
-```
-
-We recommend using this API if stricter type safety is necessary when defining reducer argument objects, as it will correctly infer the action type in the reducer based on the provided action creator. It's particularly useful for working with actions produced by `createAction` and `createAsyncThunk`.
-
-See [the "Builder Callback Notation" section of the `createReducer` reference](./createReducer.md#builder-callback-notation) for details on how to use `builder.addCase`, `builder.addMatcher`, and `builder.addDefault`
 
 ## Return Value
 
@@ -208,14 +181,6 @@ for references in a larger codebase.
 >   behavior may occur.
 
 ## Examples
-
-
-
-
-
-
-
-
 
 ```ts
 import { createSlice, createAction, PayloadAction } from '@reduxjs/toolkit'
@@ -257,7 +222,10 @@ const user = createSlice({
   // "map object API"
   extraReducers: {
     // @ts-expect-error in TypeScript, this would need to be [counter.actions.increment.type]
-    [counter.actions.increment]: (state, action /* action will be inferred as "any", as the map notation does not contain type information */) => {
+    [counter.actions.increment]: (
+      state,
+      action /* action will be inferred as "any", as the map notation does not contain type information */
+    ) => {
       state.age += 1
     }
   }
