rename themeConfig.navbar.links to themeConfig.navbar.items, fix links

--- a/docs/api/configureStore.mdx
+++ b/docs/api/configureStore.mdx
@@ -92,7 +92,7 @@ and should return a middleware array. This lets you skip importing `getDefaultMi
 retain the types of the provided middleware when constructing the store.
 
 For more details on how the `middleware` parameter works and the list of middleware that are added by default, see the
-[`getDefaultMiddleware` docs page](./getDefaultMiddleware.md).
+[`getDefaultMiddleware` docs page](./getDefaultMiddleware.mdx).
 
 ### `devTools`
 
